--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   flutter_bloc: ^7.3.1
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.8
-
+  image_picker: ^0.8.4+4
+  flutter_svg: ^0.23.0+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
@@ -63,8 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/place_holder_cover.png
+    - assets/images/place_holder.png
+    - assets/images/loading_animation.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
