--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.8
   image_picker: ^0.8.4+4
   flutter_svg: ^0.23.0+1
+  firebase_storage: ^10.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
@@ -68,6 +69,7 @@ flutter:
     - assets/images/place_holder_cover.png
     - assets/images/place_holder.png
     - assets/images/loading_animation.svg
+    - assets/images/default_cover.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
